# ds_tmp

./: README.md
{{cookiecutter.directory_name}}/: Makefile  pyproject.toml
{{cookiecutter.directory_name}}/.dvc/: config
{{cookiecutter.directory_name}}/.dvc/tmp/: lock
