[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}}"]


[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
click = "^8.1.3"
dvc = "^2.58.1"
pandas = "^2.0.2"
scikit-learn = "^1.2.0"
pdoc3 = "^0.10.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''